--- a/Avalonia_Apps/Libraries/BaseLibTests/BaseLibTests.csproj
+++ b/Avalonia_Apps/Libraries/BaseLibTests/BaseLibTests.csproj
@@ -13,6 +13,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="NSubstitute" Version="5.3.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\BaseLib\BaseLib.csproj" />
