--- a/Avalonia_Apps/Libraries/Avln_BaseLibTests/Avln_BaseLibTests.csproj
+++ b/Avalonia_Apps/Libraries/Avln_BaseLibTests/Avln_BaseLibTests.csproj
@@ -1,5 +1,5 @@
 ﻿<Project>
-	<Import Project="..\Libraries_net.props" />
+	<Import Project="..\Libraries.props" />
 	<PropertyGroup>
 		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<IsPackable>false</IsPackable>
@@ -20,15 +20,8 @@
 		<PackageReference Include="NSubstitute" Version="5.3.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<Compile Include="..\BaseLibTests\Helper\TestHelper.cs" Link="Helper\TestHelper.cs" />
-		<Compile Include="..\BaseLibTests\Helper\TestHelperTests.cs" Link="Helper\TestHelperTests.cs" />
-		<Compile Include="..\BaseLibTests\Helper\PropertyHelperTests.cs" Link="Helper\PropertyHelperTests.cs" />
-		<Compile Include="..\BaseLibTests\Helper\StringUtilsTests.cs" Link="Helper\StringUtilsTests.cs" />
-		<Compile Include="..\BaseLibTests\Helper\TypeUtilsTests.cs" Link="Helper\TypeUtilsTests.cs" />
-		<Compile Include="..\BaseLibTests\Helper\ClassHelperTests.cs" Link="Helper\ClassHelperTests.cs" />
-	</ItemGroup>
-	<ItemGroup>
 		<ProjectReference Include="..\Avln_BaseLib\Avln_BaseLib.csproj" />
+		<ProjectReference Include="..\BaseLibTests\BaseLibTests.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Compile Update="Properties\Resource.Designer.cs">
