--- a/Avalonia_Apps/Libraries/Avln_BaseLib/Avln_BaseLib.csproj
+++ b/Avalonia_Apps/Libraries/Avln_BaseLib/Avln_BaseLib.csproj
@@ -1,5 +1,5 @@
 ﻿<Project>
-	<Import Project="..\Libraries_net.props" />
+	<Import Project="..\Libraries.props" />
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
 		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
@@ -20,16 +20,13 @@
 		<None Remove="obj\**" />
 	</ItemGroup>
 	<ItemGroup>
-		<Compile Include="..\BaseLib\Helper\PropertyHelper.cs" Link="Helper\PropertyHelper.cs" />
-		<Compile Include="..\BaseLib\Helper\TypeUtils.cs" Link="Helper\TypeUtils.cs" />
-		<Compile Include="..\BaseLib\Helper\ClassHelper.cs" Link="Helper\ClassHelper.cs" />
-		<Compile Include="..\BaseLib\Helper\StringUtils.cs" Link="Helper\StringUtils.cs" />
-	</ItemGroup>
-	<ItemGroup>
 	  <PackageReference Include="Avalonia" Version="11.2.3" />
 	  <PackageReference Include="Avalonia.Markup.Xaml.Loader" Version="11.2.3" />
 	  <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.1" />
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\BaseLib\BaseLib.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Reference Condition="$(TargetFramework.StartsWith('net4'))" Include="System.Xaml" />
