--- a/CSharpBible/ConsoleMouseApp/ConsoleMouseApp_net.csproj
+++ b/CSharpBible/ConsoleMouseApp/ConsoleMouseApp_net.csproj
@@ -27,10 +27,11 @@
     <None Remove="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Properties\" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="$(UpDir)\Libraries\ConsoleLib\ConsoleLib_net.csproj" />
+    <ProjectReference Include="$(UpDir)\Libraries\ConsoleLib\ConsoleLib.csproj" />
     <ProjectReference Include="..\Libraries\ExtendedConsole\ExtendedConsole.csproj" />
   </ItemGroup>
 
