Werner_Flaschbier_BaseTests

--- a/CSharpBible/Games/Werner_Flaschbier_BaseTests/Werner_Flaschbier_ConsoleTests.csproj
+++ b/CSharpBible/Games/Werner_Flaschbier_BaseTests/Werner_Flaschbier_ConsoleTests.csproj
@@ -18,6 +18,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\Libraries\BaseLibTests\BaseLibTests.csproj" />
 		<ProjectReference Include="..\..\TestConsole\TestConsole_net.csproj" />
 		<ProjectReference Include="..\Werner_Flaschbier\Werner_Flaschbier_Console.csproj" />
 	</ItemGroup>
