--- a/CSharpBible/Libraries/BaseLib/BaseLib.csproj
+++ b/CSharpBible/Libraries/BaseLib/BaseLib.csproj
@@ -3,7 +3,6 @@
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
     <TargetFrameworks>net6.0;net7.0;net8.0;net9.0;net481;net48;net472;net462</TargetFrameworks>
-		<SignAssembly>True</SignAssembly>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
@@ -12,7 +11,8 @@
 		<UserSecretsId>4772c317-55ff-4251-b766-1c41dfb672e5</UserSecretsId>
 		<SignAssembly>True</SignAssembly>
 		<DelaySign>False</DelaySign>
-	</PropertyGroup>
+    <AssemblyOriginatorKeyFile>C:\Projekte\CSharp\CSharpBible\Libraries\sgLib.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
 	<ItemGroup>
 		<Compile Remove="Properties\AssemblyInfo.cs" />
 	</ItemGroup>
