--- a/CSharpBible/Libraries/MVVM_BaseLibTests/MVVM_BaseLibTests.csproj
+++ b/CSharpBible/Libraries/MVVM_BaseLibTests/MVVM_BaseLibTests.csproj
@@ -22,15 +22,8 @@
 		<PackageReference Include="NSubstitute" Version="5.3.0" />
 	</ItemGroup>
 	<ItemGroup>
-		<Compile Include="..\BaseLibTests\Helper\TestHelper.cs" Link="Helper\TestHelper.cs" />
-		<Compile Include="..\BaseLibTests\Helper\TestHelperTests.cs" Link="Helper\TestHelperTests.cs" />
-		<Compile Include="..\BaseLibTests\Helper\PropertyHelperTests.cs" Link="Helper\PropertyHelperTests.cs" />
-		<Compile Include="..\BaseLibTests\Helper\StringUtilsTests.cs" Link="Helper\StringUtilsTests.cs" />
-		<Compile Include="..\BaseLibTests\Helper\TypeUtilsTests.cs" Link="Helper\TypeUtilsTests.cs" />
-		<Compile Include="..\BaseLibTests\Helper\ClassHelperTests.cs" Link="Helper\ClassHelperTests.cs" />
-	</ItemGroup>
-	<ItemGroup>
-		<ProjectReference Include="..\MVVM_BaseLib\MVVM_BaseLib.csproj" />
+    <ProjectReference Include="..\BaseLibTests\BaseLibTests.csproj" />
+    <ProjectReference Include="..\MVVM_BaseLib\MVVM_BaseLib.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Compile Update="Properties\Resource.Designer.cs">
