--- a/CSharpBible/Libraries/MVVM_BaseLib/MVVM_BaseLib.csproj
+++ b/CSharpBible/Libraries/MVVM_BaseLib/MVVM_BaseLib.csproj
@@ -3,16 +3,21 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFrameworks>net481;net48;net472;net462;net6.0-windows;net7.0-windows;net8.0-windows;net9.0-windows</TargetFrameworks>
-    <SignAssembly>True</SignAssembly>
     <Platforms>AnyCPU;x86</Platforms>
-    <SignAssembly>True</SignAssembly>
     <UseWPF>true</UseWPF>
-    <AssemblyOriginatorKeyFile>..\sgLib.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <PropertyGroup>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <UserSecretsId>4772c317-55ff-4251-b766-1c41dfb672e5</UserSecretsId>
+    <SignAssembly>True</SignAssembly>
+    <DelaySign>False</DelaySign>
+    <AssemblyOriginatorKeyFile>C:\Projekte\CSharp\CSharpBible\Libraries\sgLib.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="obj\**" />
