--- a/CSharpBible/WPFSamples_2/WPF_Geometry/WPF_Geometry.csproj
+++ b/CSharpBible/WPFSamples_2/WPF_Geometry/WPF_Geometry.csproj
@@ -5,99 +5,20 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <UseWpf>true</UseWpf>
     <ProjectGuid>{B4D693A6-63AF-48A9-89CC-55BE89AE8FCC}</ProjectGuid>
-    <EnableDefaultItems>false</EnableDefaultItems>
   </PropertyGroup>
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
   <PropertyGroup>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Geometry</RootNamespace>
+    <Product>Showcase geometry</Product>
+    <Description>WPF application to demonstrate geometry</Description>
+    <Culture>en-en</Culture>
     <AssemblyName>WPF_Geometry</AssemblyName>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Compile Include="ViewModels\Interfaces\ISampleViewerViewModel.cs" />
-    <Compile Include="ViewModels\SampleViewerViewModel.cs" />
-    <Compile Include="Views\SampleViewer.cs">
-      <DependentUpon>SampleViewer.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\ShapeGeometriesExample.cs">
-      <DependentUpon>ShapeGeometriesExample.xaml</DependentUpon>
-    </Compile>
-    <Page Include="Views\CombiningGeometriesExample.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\GeometryAttributeSyntaxExample.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\GeometryUsageExample.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Compile Include="App.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Views\CombiningGeometriesExample.cs">
-      <DependentUpon>CombiningGeometriesExample.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\GeometryAttributeSyntaxExample.cs">
-      <DependentUpon>GeometryAttributeSyntaxExample.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\GeometryUsageExample.cs">
-      <DependentUpon>GeometryUsageExample.xaml</DependentUpon>
-    </Compile>
-    <Page Include="Views\PathGeometryExample.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\SampleViewer.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\ShapeGeometriesExample.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Views\PathGeometryExample.cs">
-      <DependentUpon>PathGeometryExample.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <AppDesigner Include="Properties\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="sampleimages\bluetexture.png">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="sampleimages\waterlilies.jpg">
+    <Content Include="sampleimages\**">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
