--- a/CSharpBible/WPFSamples_2/WPF_Samples_net.props
+++ b/CSharpBible/WPFSamples_2/WPF_Samples_net.props
@@ -10,5 +10,6 @@
     <Company>JC-Soft</Company>
     <Authors>Joe Care</Authors>
     <Copyright>Copyright © JC-Soft 2024</Copyright>
+    <Trademark>...</Trademark>
   </PropertyGroup>
 </Project>
