--- a/CSharpBible/Libraries/WFSystem.Data/WFSystem.Windows.Data.csproj
+++ b/CSharpBible/Libraries/WFSystem.Data/WFSystem.Windows.Data.csproj
@@ -4,6 +4,7 @@
 		<OutputType>Library</OutputType>
 		<TargetFrameworks>net481;net48;net472;net462;net6.0-windows;net7.0-windows;net8.0-windows;net9.0-windows</TargetFrameworks>
 		<!--UseWPF>true</UseWPF-->
+    <UseWindowsForms>true</UseWindowsForms>
 		<SignAssembly>True</SignAssembly>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
