--- a/CSharpBible/ConsoleApps/TestConsoleTests/TestConsoleTests.csproj
+++ b/CSharpBible/ConsoleApps/TestConsoleTests/TestConsoleTests.csproj
@@ -1,5 +1,5 @@
 ﻿<Project>
-  <Import Project="..\Solution_net.props" />
+  <Import Project="..\ConsoleApps_net.props" />
 	<PropertyGroup>
 		<TargetFramework>net6.0-windows</TargetFramework>
 		<UseWindowsForms>true</UseWindowsForms>
