--- a/CSharpBible/ConsoleApps/TestConsoleTests/TestConsoleTests.csproj
+++ b/CSharpBible/ConsoleApps/TestConsoleTests/TestConsoleTests.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="$(UpDir)\TestConsole\TestConsole_net.csproj" />
+    <ProjectReference Include="$(UpDir)\ConsoleApps\TestConsole\TestConsole_net.csproj" />
   </ItemGroup>
 
 </Project>
