--- a/CSharpBible/Libraries/MVVM_BaseLibTests/MVVM_BaseLibTests.csproj
+++ b/CSharpBible/Libraries/MVVM_BaseLibTests/MVVM_BaseLibTests.csproj
@@ -8,12 +8,15 @@
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+	<ItemGroup>
+	  <Compile Remove="Models\SysTimeTests.cs" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-		<PackageReference Condition="'$(TargetFramework.StartsWith(net4))'" Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+		<PackageReference Condition="'$(TargetFramework.StartsWith(net4))'" Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
 		<PackageReference Condition="'!$(TargetFramework.StartsWith(net4))'" Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
-		<PackageReference Include="MSTest" Version="3.8.0" />
+		<PackageReference Include="MSTest" Version="3.7.3" />
 		<PackageReference Include="coverlet.collector" Version="6.0.4">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
