--- a/CSharpBible/ConsoleApps/ConsoleMouseApp/ConsoleMouseApp_net.csproj
+++ b/CSharpBible/ConsoleApps/ConsoleMouseApp/ConsoleMouseApp_net.csproj
@@ -1,5 +1,5 @@
-<Project>
-	<Import Project="..\Solution_net.props" />
+﻿<Project>
+	<Import Project="..\ConsoleApps_net.props" />
 	<PropertyGroup>
     <TargetFramework>net6.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
@@ -32,7 +32,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(UpDir)\Libraries\ConsoleLib\ConsoleLib.csproj" />
-    <ProjectReference Include="..\Libraries\ExtendedConsole\ExtendedConsole.csproj" />
+    <ProjectReference Include="$(UpDir)\Libraries\ExtendedConsole\ExtendedConsole.csproj" />
   </ItemGroup>
-
 </Project>
