--- a/CSharpBible/Games/Sokoban_BaseTests/Sokoban_BaseTests.csproj
+++ b/CSharpBible/Games/Sokoban_BaseTests/Sokoban_BaseTests.csproj
@@ -14,8 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="MSTest" Version="3.7.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="MSTest" Version="3.8.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -25,7 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Sokoban_Base\Sokoban_Base.csproj" />
     <ProjectReference Condition="'$(TargetFramework.StartsWith(net4))'" Include="..\..\Libraries\BaseLibTests\BaseLibTests.csproj" />
-    <ProjectReference Condition="'!$(TargetFramework.StartsWith(net4))'" Include="..\..\Libraries\BaseLibTests\BaseLib_netTests.csproj" />
+    <ProjectReference Condition="'!$(TargetFramework.StartsWith(net4))'" Include="..\..\Libraries\BaseLibTests\BaseLibTests.csproj" />
   </ItemGroup>
 
 </Project>
