--- a/CSharpBible/Patterns_Tutorial/Pattern_00_Template/Pattern_00_Template.csproj
+++ b/CSharpBible/Patterns_Tutorial/Pattern_00_Template/Pattern_00_Template.csproj
@@ -12,6 +12,12 @@
 	  <None Remove="obj\**" />
 	</ItemGroup>
 	<ItemGroup>
+	  <Compile Condition="!$(TargetFramework.StartsWith(net4))" Remove="Properties\Settings.Designer.cs" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
+	</ItemGroup>
+	<ItemGroup>
 	  <ProjectReference Include="$(UpDir)\Libraries\ConsoleDisplay\ConsoleDisplay.csproj" />
 	  <ProjectReference Include="$(UpDir)\Libraries\BaseLib\BaseLib.csproj" />
 	</ItemGroup>
@@ -21,12 +27,17 @@
 			<AutoGen>True</AutoGen>
 			<DependentUpon>Resources.resx</DependentUpon>
 		</Compile>
-		<Compile Update="Properties\Settings.Designer.cs">
+		<Compile Condition="$(TargetFramework.StartsWith(net4))" Update="Properties\Settings.Designer.cs">
 			<DesignTimeSharedInput>True</DesignTimeSharedInput>
 			<AutoGen>True</AutoGen>
 			<DependentUpon>Settings.settings</DependentUpon>
 		</Compile>
-	</ItemGroup>
+    <Compile Condition="!$(TargetFramework.StartsWith(net4))" Update="Properties\Settings.core.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+  </ItemGroup>
 	<ItemGroup>
 		<EmbeddedResource Update="Properties\Resources.resx">
 			<Generator>PublicResXFileCodeGenerator</Generator>
@@ -34,9 +45,13 @@
 		</EmbeddedResource>
 	</ItemGroup>
 	<ItemGroup>
-		<None Update="Properties\Settings.settings">
+		<None Condition="$(TargetFramework.StartsWith(net4))" Update="Properties\Settings.settings">
 			<Generator>PublicSettingsSingleFileGenerator</Generator>
 			<LastGenOutput>Settings.Designer.cs</LastGenOutput>
 		</None>
-	</ItemGroup>
+    <None Condition="!$(TargetFramework.StartsWith(net4))" Update="Properties\Settings.settings">
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.core.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
 </Project>
