--- a/CSharpBible/Patterns_Tutorial/Pattern_02_Observer/Pattern_02_Observer.csproj
+++ b/CSharpBible/Patterns_Tutorial/Pattern_02_Observer/Pattern_02_Observer.csproj
@@ -15,7 +15,10 @@
 	  <ProjectReference Include="$(UpDir)\Libraries\ConsoleDisplay\ConsoleDisplay.csproj" />
 	  <ProjectReference Include="$(UpDir)\Libraries\BaseLib\BaseLib.csproj" />
 	</ItemGroup>
-	<ItemGroup>
+  <ItemGroup>
+    <Compile Condition="!$(TargetFramework.StartsWith(net4))" Remove="Properties\Settings.Designer.cs" />
+  </ItemGroup>
+  <ItemGroup>
 		<Compile Update="Properties\Resources.Designer.cs">
 			<DesignTime>True</DesignTime>
 			<AutoGen>True</AutoGen>
