--- a/CSharpBible/Patterns_Tutorial/Pattern_Tutorial.props
+++ b/CSharpBible/Patterns_Tutorial/Pattern_Tutorial.props
@@ -2,8 +2,8 @@
 	<PropertyGroup>
 		<UpDir>..\..</UpDir>
 		<BaseOutputPath>$(UpDir)\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
-		<BaseIntermediateOutputPath>(UpDir)\..\obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
-		<LangVersion>9.0</LangVersion>
+		<BaseIntermediateOutputPath>$(UpDir)\..\obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
+		<LangVersion>13.0</LangVersion>
 		<Nullable>enable</Nullable>
 		<DefineConstants>NULLABLE</DefineConstants>
 		<ImplicitUsings>disable</ImplicitUsings>
