--- a/CSharpBible/WPFSamples_2/WPF_Brushes/WPF_Brushes.csproj
+++ b/CSharpBible/WPFSamples_2/WPF_Brushes/WPF_Brushes.csproj
@@ -31,6 +31,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.2" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+    <ProjectReference Include="..\..\Libraries\BaseLib\BaseLib.csproj" />
   </ItemGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
