--- a/WinAhnenNew/Gen_BaseItf/Gen_BaseItf.csproj
+++ b/WinAhnenNew/Gen_BaseItf/Gen_BaseItf.csproj
@@ -4,6 +4,8 @@
 	  <TargetFrameworks>net481;net6.0;net7.0;net8.0</TargetFrameworks>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+  </ItemGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 
