--- a/WinAhnenNew/WinAhnenCls/WinAhnenCls.csproj
+++ b/WinAhnenNew/WinAhnenCls/WinAhnenCls.csproj
@@ -2,7 +2,7 @@
 	<Import Project="..\WinAhnen.props" />
 
 	<PropertyGroup>
-		<TargetFrameworks>net481;net6.0;net7.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>net481;net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
@@ -14,7 +14,8 @@
 		<None Remove="obj\**" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\Gen_BaseItf\Gen_BaseItf.csproj" />
-	</ItemGroup>
+	  <ProjectReference Include="..\..\CSharpBible\Libraries\GenInterfaces\GenInterfaces.csproj" />
+    <ProjectReference Include="..\..\CSharpBible\Libraries\BaseLib\BaseLib.csproj" />
+  </ItemGroup>
 
 </Project>
