--- a/CSharpBible/MVVM_Tutorial/MVVM_Tutorial_net.props
+++ b/CSharpBible/MVVM_Tutorial/MVVM_Tutorial_net.props
@@ -1,14 +1,9 @@
 <Project>
+  <Import Project="..\Solution_net.props"/>
   <PropertyGroup>
-	  <UpDir>..\..</UpDir>
-	  <BaseOutputPath>..\..\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
-    <BaseIntermediateOutputPath>..\..\..\obj.net\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
+	  <UpDir>..\$(UpDir)</UpDir>
+	  <BaseOutputPath>$(UpDir)\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(UpDir)\..\obj.net\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
 	  <RootNamespace>$(MSBuildProjectName.Replace(".","_").Replace("_net",""))</RootNamespace>
-    <LangVersion>12.0</LangVersion>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>disable</ImplicitUsings>
-    <Company>JC-Soft</Company>
-    <Authors>Joe Care</Authors>
-    <Copyright>Copyright © JC-Soft 2023</Copyright>
   </PropertyGroup>
 </Project>
