--- a/CSharpBible/Solution_net.props
+++ b/CSharpBible/Solution_net.props
@@ -8,6 +8,7 @@
 		<ImplicitUsings>disable</ImplicitUsings>
 		<Company>JC-Soft</Company>
 		<Authors>Joe Care</Authors>
-		<Copyright>Copyright © JC-Soft 2023</Copyright>
+    <SuppressTfmSupportBuildWarnings>true</SuppressTfmSupportBuildWarnings>
+		<Copyright>Copyright © JC-Soft 2025</Copyright>
 	</PropertyGroup>
 </Project>
