--- a/CSharpBible/Calc/Calc32/Calc32.csproj
+++ b/CSharpBible/Calc/Calc32/Calc32.csproj
@@ -39,6 +39,7 @@
 		<EmbeddedResource Update="Properties\Resources.resx">
 			<Generator>PublicResXFileCodeGenerator</Generator>
 			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
+			<CustomToolNamespace>Calc32.Properties</CustomToolNamespace>
 		</EmbeddedResource>
 	</ItemGroup>
 	<ItemGroup>
