--- a/CSharpBible/Calc/Calc32/Calc32_net.WForms.csproj
+++ b/CSharpBible/Calc/Calc32/Calc32_net.WForms.csproj
@@ -56,8 +56,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Update="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
+      <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+      <CustomToolNamespace>Calc32.Properties</CustomToolNamespace>
     </None>
   </ItemGroup>
 
