--- a/CSharpBible/Calc/Calc32/Calc32.WForms.csproj
+++ b/CSharpBible/Calc/Calc32/Calc32.WForms.csproj
@@ -49,8 +49,18 @@
 		</Compile>
 	</ItemGroup>
 	<ItemGroup>
+		<EmbeddedResource Update="Properties\Resources.en.resx">
+		  <SubType>Designer</SubType>
+		  <CustomToolNamespace>Calc32.Properties</CustomToolNamespace>
+		  <Generator></Generator>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Properties\Resources.de.resx">
+		  <SubType>Designer</SubType>
+		  <CustomToolNamespace>Calc32.Properties</CustomToolNamespace>
+		  <Generator></Generator>
+		</EmbeddedResource>
 		<EmbeddedResource Update="Properties\Resources.resx">
-			<Generator>ResXFileCodeGenerator</Generator>
+			<Generator>PublicResXFileCodeGenerator</Generator>
 			<LastGenOutput>Resources.Designer.cs</LastGenOutput>
 			<CustomToolNamespace>Calc32.Properties</CustomToolNamespace>
 		</EmbeddedResource>
@@ -59,6 +69,7 @@
 		<None Update="Properties\Settings.settings">
 			<Generator>PublicSettingsSingleFileGenerator</Generator>
 			<LastGenOutput>Settings.Designer.cs</LastGenOutput>
+			<CustomToolNamespace>Calc32.Properties</CustomToolNamespace>
 		</None>
 	</ItemGroup>
 	<ItemGroup>
