--- a/CSharpBible/MVVM_Tutorial/MVVM_Tutorial.props
+++ b/CSharpBible/MVVM_Tutorial/MVVM_Tutorial.props
@@ -1,15 +1,9 @@
 <Project>
+  <Import Project="..\Solution.props"/>
 	<PropertyGroup>
-		<UpDir>..\..</UpDir>
-		<BaseOutputPath>..\..\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
-		<BaseIntermediateOutputPath>..\..\..\obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
-		<RootNamespace>$(MSBuildProjectName.Replace(".","_").Replace("_net",""))</RootNamespace>
-		<LangVersion>12.0</LangVersion>
-		<Nullable>enable</Nullable>
-		<DefineConstants>NULLABLE</DefineConstants>
-		<ImplicitUsings>disable</ImplicitUsings>
-		<Company>JC-Soft</Company>
-		<Authors>Joe Care</Authors>
-		<Copyright>Copyright © JC-Soft 2023</Copyright>
+		<UpDir>..\$(UpDir)</UpDir>
+	  <BaseOutputPath>$(UpDir)\..\bin\$(MSBuildProjectName)\</BaseOutputPath>
+    <BaseIntermediateOutputPath>$(UpDir)\..\obj\$(MSBuildProjectName)\</BaseIntermediateOutputPath>
+	  <RootNamespace>$(MSBuildProjectName.Replace(".","_").Replace("_net",""))</RootNamespace>
 	</PropertyGroup>
 </Project>
