--- a/CSharpBible/Calc/Calc32/Calc32.WForms.csproj
+++ b/CSharpBible/Calc/Calc32/Calc32.WForms.csproj
@@ -25,6 +25,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Remove="Properties\AssemblyInfo.cs" />
+		<Compile Remove="Visual\CommandBindingAttribute.cs" />
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="*.bak" />
@@ -33,8 +34,9 @@
 	  <None Remove="App.config" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\..\Libraries\BaseLib\BaseLib.csproj" />
-		<ProjectReference Include="Calc32.Model.csproj" />
+    <ProjectReference Include="..\..\Libraries\BaseLib\BaseLib.csproj" />
+		<ProjectReference Include="..\..\Libraries\WFSystem.Data\WFSystem.Windows.Data.csproj" />
+    <ProjectReference Include="Calc32.Model.csproj" />
 	</ItemGroup>
 	<ItemGroup>
 		<Compile Update="Properties\Resources.Designer.cs">
