--- a/CSharpBible/Calc/Calc32/Calc32_net.WForms.csproj
+++ b/CSharpBible/Calc/Calc32/Calc32_net.WForms.csproj
@@ -33,6 +33,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Libraries\BaseLib\BaseLib.csproj" />
+    <ProjectReference Include="..\..\Libraries\WFSystem.Data\WFSystem.Windows.Data.csproj" />
     <ProjectReference Include="Calc32.Model.csproj" />
   </ItemGroup>
   <ItemGroup>
@@ -49,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <CustomToolNamespace>Calc32.Properties</CustomToolNamespace>
     </EmbeddedResource>
