--- a/CSharpBible/Games/HexaBan_Console/HexaBan_ConsoleLnx.csproj
+++ b/CSharpBible/Games/HexaBan_Console/HexaBan_ConsoleLnx.csproj
@@ -11,7 +11,7 @@
   <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1-Preview.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
   </ItemGroup>
 
 </Project>
