--- a/CSharpBible/Data/NebelEbook/Properties/launchSettings.json
+++ b/CSharpBible/Data/NebelEbook/Properties/launchSettings.json
@@ -10,6 +10,10 @@
     "Profil \"2\"": {
       "commandName": "Project",
       "commandLineArgs": "pdf"
+    },
+    "Profil \"3\"": {
+      "commandName": "Project",
+      "commandLineArgs": "xaml"
     }
   }
 }
