--- a/CSharpBible/Games/Sokoban_Base/Sokoban_Base.csproj
+++ b/CSharpBible/Games/Sokoban_Base/Sokoban_Base.csproj
@@ -53,6 +53,7 @@
 	  <Resource Include="Properties\Resource1.resx">
 	    <Generator>PublicResXFileCodeGenerator</Generator>
 	    <LastGenOutput>Resource1.Designer.cs</LastGenOutput>
+	    <CustomToolNamespace>Sokoban.Properties</CustomToolNamespace>
 	  </Resource>
 	</ItemGroup>
 
